contact form css and alignment fix

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1358,21 +1358,6 @@ input.form-control {
   font-weight: 100;
 }
 
-.Contactusbtn {
-  border-radius: 20px;
-  width: 100px;
-  height: 30px;
-  background-color: skyblue;
-  left: 0.2cm;
-  position: relative;
-  bottom: 0.7cm;
-  font-family: Poppins, Regular;
-  font-weight: 100;
-  font-size: 15px;
-  border-radius: 40px;
-  border: none !important;
-  color: #ffffff;
-}
 /*     Footer css*/
 .footer {
   background-color: #5fbd3a;
@@ -1380,9 +1365,10 @@ input.form-control {
   position: relative;
   height: 11cm;
   right: 2.5cm;
-  width: 34.5cm;
+  width: 100%;
   overflow: hidden;
   border-radius: 30px;
+  top: 8cm;
   box-shadow: 9px 2px 22px 12px #00000029 !important;
 }
 .AsokhaFooter {
@@ -1504,19 +1490,19 @@ input.form-control {
   top: 2cm !important;
 }
 
-/* customize component style */
+/* customized component style */
 
 .imgCard {
   width: 100%;
-  height: 800px;
+  height: 700px;
   border: none;
   border-color: #ffffff;
   padding: 0%;
 }
 
 .bgImg {
-  width: "100%";
-  height: 800px;
+  width: 100%;
+  height: 700px;
 }
 
 .cardTitle {
@@ -1531,10 +1517,13 @@ input.form-control {
   background-color: #442211 0% 0% no-repeat padding-box;
   backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
-  top: 0.5cm;
+  top: 40%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   position: absolute;
-  margin: 4cm;
-  text-align: center;
+  margin: 0;
+  /* text-align: center; */
   color: #0c0b10;
 }
 
@@ -1544,12 +1533,15 @@ input.form-control {
 }
 
 .cardButton {
-  width: 35%;
+  width: 40%;
   height: 50px;
   border-radius: 40px;
   color: #106cc4;
-  top: 8cm;
-  margin: 180px;
+  top: 123%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  margin: 0;
   font-size: 20px;
   font-weight: 500;
   font-family: Poppins, Regular;
@@ -1579,36 +1571,46 @@ h1 {
 }
 
 .contactCard {
-  height: max-content;
-  width: 75%;
+  height: 400px;
+  width: 100%;
   align-items: center;
   background-color: #129652 !important;
   border-radius: 35px;
-  left: 7cm;
-  bottom: 14cm;
-  position: relative;
+  top: 5cm;
+  color: #ffffff;
   box-shadow: 9px 3px 22px #00000029 !important;
-}
-
-.contactTitle {
-  color: white;
-  font-size: 32px;
 }
 
 .contactImg {
   width: 377px;
   height: 283px;
   position: absolute;
+  text-align: left;
 }
 
-#contactForm {
-  /* text-align: center; */
-  position: absolute;
-  /* bottom: 9cm; */
+.contactForm {
   font-family: Poppins, Regular;
   font-weight: 100;
-  align-items: center;
-  width: 7cm;
-  left: 10cm;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  width: 10cm;
+  height: fit-content;
+  margin-left: 30px;
+}
+
+.Contactusbtn {
+  border-radius: 20px;
+  width: 100px;
+  height: max-content;
+  background-color: rgb(49, 170, 218);
+  font-family: Poppins, Regular;
+  font-weight: 100;
+  font-size: 15px;
+  border-radius: 40px;
+  border: none !important;
+  color: #ffffff;
+  top: 100%;
+  left: 50%;
+  margin: 0;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
